# AURA_simulation

./: README.md  package.xml  setup.cfg  setup.py
config/: aura_controllers.yaml  aura_rviz.rviz  aura_view.rviz
launch/: bringup.launch.py  view_model.launch.py
scripts/: test_launch.py
test/: test_aura_simulation.py
urdf/: aura_robot.urdf.xacro  materials.xacro
worlds/: aura_world.world
